# abstract-doc-parser

./: .env.example  README.md  main.py  pyproject.toml
src/modules/docs_parser/application/: parse_document_by_blob_interactor.py  parse_document_by_path_interactor.py
src/modules/docs_parser/domain/: interfaces.py  value_objects.py
src/modules/docs_parser/infraestructure/: llamaparse_service.py  markitdown_service.py  pymupdf_service.py
src/modules/docs_parser/infraestructure/services/: azure_document_intelligence.py  docling_service.py  llamaparse_service.py  markitdown_service.py  pymupdf_service.py  unstructured_service.py
