[project]
name = "abstract-doc-parser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "azure-ai-documentintelligence>=1.0.2",
    "azure-core>=1.34.0",
    "docling>=2.32.0",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.115.12",
    "llama-cloud-services>=0.6.22",
    "markitdown[all]>=0.0.2",
    "openai>=1.79.0",
    "pymupdf>=1.25.5",
    "pymupdf4llm>=0.0.24",
    "ruff>=0.11.10",
    "unstructured[pdf]>=0.17.2",
]
